# kaku

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package.json
.github/workflows/: ci.yml  release.yml
crates/kaku/: Cargo.toml
crates/kaku-core/: Cargo.toml
crates/kaku-core/src/: document.rs  lib.rs  parse.rs
crates/kaku-render/: Cargo.toml
crates/kaku-render/src/: layout.rs  lib.rs  syntax.rs  theme.rs
crates/kaku/src/: app.rs  args.rs  input.rs  main.rs  update.rs  watch.rs
docs/: RELEASING.md
