[workspace]
members = [
    "crates/kaku-core",
    "crates/kaku-render",
    "crates/kaku",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voidique/kaku"
homepage = "https://github.com/voidique/kaku"
documentation = "https://github.com/voidique/kaku"
rust-version = "1.85"
authors = ["voidique"]

[workspace.dependencies]
anstyle = "1.0.13"
crossterm = "0.29.0"
notify = "8.2.0"
pico-args = "0.5.0"
pulldown-cmark = "0.13.0"
regex-automata = "0.4.13"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell", "npm", "homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
tap = "voidique/homebrew-tap"
npm-scope = "@voidique"
pr-run-mode = "plan"

