[package]
name = "kaku"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
default-run = "kaku"
description = "A fast, minimal Markdown reader for terminals"
readme = "../../README.md"

[[bin]]
name = "kaku"
path = "src/main.rs"

[features]
default = []
syntax = ["kaku-render/syntax"]

[dependencies]
crossterm.workspace = true
kaku-core = { path = "../kaku-core" }
kaku-render = { path = "../kaku-render", default-features = false }
notify.workspace = true
pico-args.workspace = true
semver = "1.0.27"
ureq = { version = "2.12.1", default-features = true }
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
anstyle.workspace = true
